completed problem 5. also updated README.md with more description
