# src/controllers/user/validations/login.validation.ts
@@ -1,7 +1,0 @@
-import Joi from 'joi'
-
-const LoginValidation = Joi.object({
-    email: Joi.string().email().required(),
-    password: Joi.string().required(),
-})
-export { LoginValidation }
