# src/dtos/users/login.user.dto.ts
@@ -1,0 +1,7 @@
+import Joi from 'joi'
+import { Types } from '../../types/types'
+
+export const LoginUserJoiSchema = Joi.object<Types.User.LoginDto>().keys({
+    email: Joi.string().email().required(),
+    password: Joi.string().required(),
+})
